2012-03-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert): Treat non-breaking space just like normal
	space.  This seems to produce more pleasing results.
	(shr-insert): Only insert a blank line if we're starting from an image.

2012-03-15  Elias Pipping  <pipping@lavabit.com>

	* Makefile.in: Respect DESTDIR.

2012-03-14  Christopher Schmidt  <christopher@ch.ristopher.com>

        * gnus-msg.el (gnus-inews-do-gcc): Add gnus-gcc-pre-body-encode-hook
        and gnus-gcc-post-body-encode-hook.

2012-03-10  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-expire-articles-1): Don't try to expire
	messages that don't exist.

	* gnus-sum.el (gnus-summary-expire-articles): Ditto.

2012-03-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

2012-03-19  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-insert): Update the text state properly to avoid
	inserting spurious paragraph starts.

2012-03-14  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-table-widths): Divide the extra width more fairly over
	the TDs (bug#10973).
	(shr-render-td): Don't delete too much padding.
	(shr-natural-width): Compute the natural width more correctly.
	(shr-insert): Allow the natural width to be computed for tables again.
	(shr-tag-table-1): Rework how the natural widths are computed by
	rendering the table a third time.
	(shr-natural-width): Removed.
	(shr-buffer-width): New function.
	(shr-expand-newlines): Use it.

	* gnus-msg.el (gnus-bug): Don't delete the other windows.  We may be
	using a `gnus-use-full-window' setup (bug#11013).

2012-03-12  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-int.el (gnus-backend-trace): Flip default to nil before Emacs
	24.1 release.

2012-03-10  David Edmondson  <dme@dme.org>

	* mm-uu.el (mm-uu-forward-extract): Allow for blank lines between the
	'Forwarded Message' header and the start of the message.

2012-03-04  Thierry Volpiatto  <thierry.volpiatto@gmail.com>
