@@ -3,6 +3,8 @@
 	* shr.el (shr-insert): Treat non-breaking space just like normal
 	space.  This seems to produce more pleasing results.
 	(shr-insert): Only insert a blank line if we're starting from an image.
+	(shr-tag-br): Allow <br> to end lines or to make a single blank line.
+	(shr-ensure-paragraph): Consider lines with white space to be blank.
 
 2012-03-15  Elias Pipping  <pipping@lavabit.com>
 
